advances in family day

--- a/Tesis.bib
+++ b/Tesis.bib
@@ -210,3 +210,9 @@
   publisher={MIT press}
 }
 
+%MCMC methods
+@article{casella2008monte,
+  title={Monte Carlo Statistical Methods},
+  author={Casella, George},
+  year={2008}
+}
